# utillibc

./: CMakeLists.txt  utillibc.c
inc/: vector.h
src/: vector.c
